--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <p class="projects__row-content-desc">
                 VOIP Phone Exchanges are the future. Don't let phone companies fool you; both small and large bussinesses <b>do not</b> need landline phones! I can help you set up a local or cloud voice exchange with your own toll-free number too! 
               </p>
-              <button class="btn btn--med btn--theme dynamicBgClr" onclick="document.getElementById('voipstripe').style.display = 'inherit'">Check it out!</button>
+              <button class="btn btn--med btn--theme dynamicBgClr" onclick="for (i of document.getElementsByClassName('popupcontainer')){i.hidden = true}; document.getElementById('voipstripecontainer').hidden = false">Check it out!</button>
               </div>
               
             </div>
@@ -158,7 +158,7 @@
               <p class="projects__row-content-desc">
                 Webhooks encourage interconnected-ness between apps (automation!). I use Webhooks to interface with APIs across different tools.
               </p>
-              <button class="btn btn--med btn--theme dynamicBgClr" onclick="document.getElementById('webhookstripe').style.display = 'inherit'">Check it out!</button>
+              <button class="btn btn--med btn--theme dynamicBgClr" onclick="for (i of document.getElementsByClassName('popupcontainer')){i.hidden = true}; document.getElementById('webhookstripecontainer').hidden = false; for (i of document)">Check it out!</button>
             </div>
           </div>
         </div>
@@ -457,8 +457,8 @@
             </div>
         </div>
       </div>
-    <div class="popupcontainer"><div id="voipstripe" class="popup"><stripe-pricing-table pricing-table-id="prctbl_1MWPyxLcC6CnftayH7zWsXGw" publishable-key="pk_live_51L31eNLcC6Cnftayecvm7TL8aiF00lKZmB6SYCSstYQ22r0vBGn7aZrYgcNtYKvIrt0lGnH29H0lZDFvpilePHSH0067qcbjss"></stripe-pricing-table></div></div>
-    <div class="popupcontainer"><div id="webhookstripe" class="popup"><stripe-pricing-table pricing-table-id="prctbl_1MWdbtLcC6Cnftay19woctEN" publishable-key="pk_live_51L31eNLcC6Cnftayecvm7TL8aiF00lKZmB6SYCSstYQ22r0vBGn7aZrYgcNtYKvIrt0lGnH29H0lZDFvpilePHSH0067qcbjss"></stripe-pricing-table></div></div>
+    <div class="popupcontainer" id="voipstripecontainer" hidden><div id="voipstripe" class="popup"><stripe-pricing-table pricing-table-id="prctbl_1MWPyxLcC6CnftayH7zWsXGw" publishable-key="pk_live_51L31eNLcC6Cnftayecvm7TL8aiF00lKZmB6SYCSstYQ22r0vBGn7aZrYgcNtYKvIrt0lGnH29H0lZDFvpilePHSH0067qcbjss"></stripe-pricing-table></div></div>
+    <div class="popupcontainer" id="webhookstripecontainer"  hidden><div id="webhookstripe" class="popup"><stripe-pricing-table pricing-table-id="prctbl_1MWdbtLcC6Cnftay19woctEN" publishable-key="pk_live_51L31eNLcC6Cnftayecvm7TL8aiF00lKZmB6SYCSstYQ22r0vBGn7aZrYgcNtYKvIrt0lGnH29H0lZDFvpilePHSH0067qcbjss"></stripe-pricing-table></div></div>
     </footer>
 
     <script src="./index.js"></script>
