--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               <p class="projects__row-content-desc">
                 Webhooks encourage interconnected-ness between apps (automation!). I use Webhooks to interface with APIs across different tools.
               </p>
-              <button class="btn btn--med btn--theme dynamicBgClr" onclick="for (i of document.getElementsByClassName('popupcontainer')){i.hidden = true}; document.getElementById('webhookstripecontainer').hidden = false; for (i of document)">Check it out!</button>
+              <button class="btn btn--med btn--theme dynamicBgClr" onclick="for (i of document.getElementsByClassName('popupcontainer')){i.hidden = true}; document.getElementById('webhookstripecontainer').hidden = false;">Check it out!</button>
             </div>
           </div>
         </div>
