--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title"><img src="https://img.icons8.com/ios-glyphs/30/null/voip-gateway.png" style="bottom: -1px;position: relative;width: 20px;">VOIP Phone Exchanges</h3>
               <p class="projects__row-content-desc">
-                VOIP Phone Exchanges are the future. Don't let phone companies fool you; both small and large bussinesses <b>do not</b> need landline phones! I can help you set up a local or cloud voice exchange with your own toll-free number too! 
+                I'll set-up a VOIP Phone exchange for your company. I'll do all the set-up for you, and make sure everything works to your expectations before delivering the project.<br>VOIP Phone Exchanges are the future. Don't let phone companies fool you; both small and large bussinesses <b>do not</b> need landline phones! I can help you set up a local or cloud voice exchange with your own toll-free number too! 
               </p>
               <button class="btn btn--med btn--theme dynamicBgClr" onclick="for (i of document.getElementsByClassName('popupcontainer')){i.hidden = true}; document.getElementById('voipstripecontainer').hidden = false">Check it out!</button>
               </div>
