--- a/index.html
+++ b/index.html
@@ -216,6 +216,9 @@
               <div class="skills__skill">Shopify</div>
               <div class="skills__skill">Webhooks</div>
               <div class="skills__skill">WebTorrent</div>
+              <div class="skills__skill">Stripe</div>
+              <div class="skills__skill">VOIP</div>
+              <div class="skills__skill">Web Scraping</div>
             </div>
           </div>
         </div>
