--- a/index.html
+++ b/index.html
@@ -540,6 +540,7 @@
         }}
     });
     </script>
+    <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="97eaa45f-5410-4709-a13c-83b70a160130";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
     <div class="popupcontainer" id="voipstripecontainer" hidden><div id="voipstripe" class="popup"><stripe-pricing-table pricing-table-id="prctbl_1MWPyxLcC6CnftayH7zWsXGw" publishable-key="pk_live_51L31eNLcC6Cnftayecvm7TL8aiF00lKZmB6SYCSstYQ22r0vBGn7aZrYgcNtYKvIrt0lGnH29H0lZDFvpilePHSH0067qcbjss"></stripe-pricing-table></div></div>
     <div class="popupcontainer" id="webhookstripecontainer" hidden><div id="webhookstripe" class="popup"><stripe-pricing-table pricing-table-id="prctbl_1MWdbtLcC6Cnftay19woctEN" publishable-key="pk_live_51L31eNLcC6Cnftayecvm7TL8aiF00lKZmB6SYCSstYQ22r0vBGn7aZrYgcNtYKvIrt0lGnH29H0lZDFvpilePHSH0067qcbjss"></stripe-pricing-table></div></div>
     <div class="popupcontainer" id="pythonstripecontainer" hidden><div id="pythonstripe" class="popup"><stripe-pricing-table pricing-table-id="prctbl_1MYBRjLcC6Cnftay2zjJqa0R" publishable-key="pk_live_51L31eNLcC6Cnftayecvm7TL8aiF00lKZmB6SYCSstYQ22r0vBGn7aZrYgcNtYKvIrt0lGnH29H0lZDFvpilePHSH0067qcbjss"></stripe-pricing-table></div></div>
